--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
          <div class="buffer col-12"></div>
          <section class="text-center col-12">
           <hr>   
-          <button class="btn btn-primary btn-warning">Find out more</button>
+          <a href="https://mailchi.mp/c6f934b01dc8/masif">
+            <button class="btn btn-primary btn-warning">Find out more</button>
+          </a>
          </section>
       </div>
     </div>
